# gitTrain

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  conflict.rs  errors.rs  git.rs  gitlab.rs  lib.rs  main.rs  stack.rs  ui.rs  utils.rs
src/gitlab/: api.rs  markdown.rs  mod.rs
src/stack/: manager.rs  mod.rs  state.rs  types.rs
tests/: integration_tests.rs  mod.rs
