[package]
name = "git-train"
version = "0.1.0"
edition = "2021"
description = "Simple stack diff CLI tool"

[[bin]]
name = "git-train"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
console = "0.15"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0.12"
url = "2.5"
urlencoding = "2.1" 