[package]
name = "gittrain"
version = "0.1.0"
edition = "2021"
description = "Simple stack diff CLI tool"

[[bin]]
name = "gittrain"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
console = "0.15"
inquire = { version = "0.7.5", features = ["fuzzy", "editor"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0.12"
url = "2.5"
urlencoding = "2.1"
toml = "0.8"
dirs = "6.0"
tempfile = "3.8"
regex = "1.10" 
async-trait = "0.1.88"
